# flutter-openpgp

./: .gitignore  CHANGELOG.md  Makefile  README.md  pubspec.yaml
.github/workflows/: drive.yml  example-docker.yml  hover.yml  pub.yml  release.yml  tests_android.yml  tests_browser.yml  tests_ios.yml  tests_linux.yml  tests_macos.yml  tests_windows.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/binding/: openpgp.h
example/: Dockerfile  README.md  example.code-workspace  pubspec.yaml
example/go/: go.mod  go.sum  hover.yaml
example/integration_test/: app_test.dart
example/ios/: Podfile
example/lib/: armor.dart  convert.dart  encrypt_decrypt.dart  encrypt_decrypt_bytes.dart  encrypt_decrypt_file.dart  encrypt_decrypt_symmetric.dart  encrypt_decrypt_symmetric_bytes.dart  encrypt_sign_decrypt_verify.dart  generate.dart  main.dart  main_desktop.dart  metadata.dart  sign_verify.dart  sign_verify_bytes.dart  sign_verify_data.dart  sign_verify_data_bytes.dart
example/linux/: .gitignore  CMakeLists.txt  app_configuration.mk  my_application.cc  window_configuration.cc
example/test/: app_test.dart  widget_test.dart
example/test_driver/: app.dart  app_test.dart
example/web/: index.html  manifest.json
example/windows/: .gitignore  CMakeLists.txt
go/: README.md  go.mod  go.sum  import.go.tmpl  plugin.go
ios/: openpgp.podspec
ios/Classes/: OpenpgpPlugin.h  OpenpgpPlugin.m  OpenpgpPlugin.swift
ios/OpenPGPBridge.framework/: OpenPGPBridge
ios/OpenPGPBridge.xcframework/: Info.plist
ios/Openpgp.xcframework/: Info.plist
ios/native/: FastOpenpgp.podspec
lib/: binding.dart  ffi.dart  key_options.dart  key_pair.dart  models.dart  openpgp.dart  openpgp_bridge.dart  openpgp_sync.dart  options.dart  shared.dart
lib/binding/: functions.dart  key_options.dart  key_pair.dart  options.dart  return.dart
lib/bridge/: binding.dart  binding_stub.dart  bridge.dart  functions.dart  return.dart
lib/mixin/: openpgp_request_builders.dart  openpgp_response_handlers.dart
lib/model/: bridge.pb.dart  bridge.pbenum.dart  bridge.pbjson.dart  bridge_model_generated.dart
lib/web/: openpgp_web.dart
lib/web/js/: go.dart  (+6 more)
linux/: CMakeLists.txt  Makefile  openpgp_plugin.cc  plugin_configuration.mk
linux/include/: openpgp.h  openpgp_plugin.h
linux/include/openpgp/: openpgp_plugin.h
linux/shared/: libopenpgp_bridge.h
macos/: openpgp.podspec
macos/Classes/: OpenpgpPlugin.swift
macos/Openpgp.framework/: Openpgp
macos/OpenpgpMobile.framework/: OpenpgpMobile
scripts/: upgrade_bridge_flatbuffers.sh  upgrade_bridge_libs.sh  upgrade_bridge_protobuf.sh
windows/: CMakeLists.txt  openpgp_plugin.cpp
windows/shared/: libopenpgp_bridge.h
(+46 files in other folders)
